<resources>
    <string name="app_name">Game Template</string>
    <string name="splash">Splash Screen</string>
    <string name="game">Game Screen</string>
    <string name="menu">Menu Screen</string>
    <string name="help">Help Screen</string>
    <string name="scores">Scores Screen</string>
    <string name="settings">Settings Screen</string>
    <string name="menu_start_game">START GAME</string>
    <string name="menu_quick_game">QUICK GAME</string>
    <string name="menu_settings_game">SETTINGS</string>
    <string name="menu_about">ABOUT</string>
    <string name="menu_exit">EXIT</string>
</resources>