<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark">

    <!--<ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgroundmenu" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/start"
            style="@style/MenuFont"
            android:layout_gravity="end"
            android:text="@string/menu_start_game" />

        <TextView
            android:id="@+id/quick"
            style="@style/MenuFont"
            android:text="@string/menu_quick_game" />

        <TextView
            android:id="@+id/settings"
            style="@style/MenuFont"
            android:text="@string/menu_settings_game" />

        <TextView
            android:id="@+id/about"
            style="@style/MenuFont"
            android:text="@string/menu_about" />

        <TextView
            android:id="@+id/exit"
            style="@style/ExitFont"
            android:text="@string/menu_exit" />
    </LinearLayout>

</RelativeLayout>